# librespot

./: Cargo.toml
connect/: Cargo.toml
connect/src/: spirc.rs
metadata/src/: lib.rs
playback/src/: player.rs
service/: Cargo.toml
service/src/: lib.rs  service.rs
src/: lib.rs  main.rs
