[package]
name = "librespot-service"
version = "0.1.0"
authors = ["Jakob Michalka <jakob.michalka@tum.de>"]
edition = "2018"

[dependencies.librespot-core]
path = "../core"
[dependencies.librespot-metadata]
path = "../metadata"

[dependencies]
futures = "0.*"
log = "0.3.5"
gotham = "0.*"
gotham_derive = "0.*"
hyper = "0.12"
mime = "0.3"
serde = "1"
serde_derive = "1"
serde_json = "1"
#rocket = "0.4.0"
#rocket_contrib = "0.4.0"
lru = "0.*"